# geojson-bbox

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  geojson_bbox.py  pyproject.toml  setup.py
.github/workflows/: build.yaml  main.yaml  publish.yaml
gbbox/: __init__.py  constants.py  geojson_bbox.py  objects.py
tests/: conftest.py  test_objects.py
