[tool.poetry]
name = "gbbox"
version = "0.1.1"
description = "Simple Python module for calculating bounding box (bbox) from given GeoJSON object"
authors = ["Łukasz Mikołajczak <mikolajczak.luq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luqqk/geojson-bbox"
repository = "https://github.com/luqqk/geojson-bbox"
keywords = ["python", "gis", "geojson", "bbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9.5"
pydantic = "1.9.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.3"
pytest = "7.1.2"
pytest-cases = "3.6.13"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
